--- a/src/index.html
+++ b/src/index.html
@@ -215,7 +215,7 @@
         <h1 class="mb-8 text-4xl font-bold leading-none tracking-tighter text-neutral-600 md:text-7xl lg:text-5xl sm:text-left md:text-center ">Our Locations</h1>
           <div class="grid w-full grid-cols-1 gap-8 mx-auto lg:grid-cols-2">
             <div class="p-6">
-              <iframe class="shadow-2xl" width="100%" height="350" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJgz5y4Z5iYIgRWykSRESye9c&key=AIzaSyBO2gz79YmNLYDn_pJ1hKBNex24rOTca9c"></iframe>                    
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3263.735929888548!2d-85.13205068491897!3d35.11330428033054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8860629ee03a2685%3A0x79264f3bb37c1b46!2sLinda&#39;s%20Produce!5e0!3m2!1sen!2sus!4v1660315211469!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               <h1 class="mx-auto mb-8 text-2xl font-semibold mt-8 leading-none tracking-tighter text-neutral-600 lg:text-3xl">Highway 58  |  423-344-2600 </h1>
               <p class="mx-auto text-base leading-relaxed text-gray-500">
                 5900 TN-58 <br>
@@ -225,7 +225,7 @@
             </div>
             
             <div class="p-6">
-              <iframe class="shadow-2xl" width="100%" height="350" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJRyezfGZnYIgRa1rJs1UDyqA&key=AIzaSyBO2gz79YmNLYDn_pJ1hKBNex24rOTca9c"></iframe>                    
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3267.949396993027!2d-85.26854097845202!3d35.00797182672634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886067667cec0ea1%3A0x6b3661f3058a58bd!2sLinda&#39;s%20Fruit%20Stand!5e0!3m2!1sen!2sus!4v1660315298966!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <h1 class="mx-auto mb-8 text-2xl font-semibold mt-8 leading-none tracking-tighter text-neutral-600 lg:text-3xl">East Ridge | 423-629-5317 </h1>
                 <p class="mx-auto text-base leading-relaxed text-gray-500">
                   3306 Ringgold Rd <br>
