Added canned goods page

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
                   </div>
                   <div id="dropdown-menu" class="hidden absolute bg-teal-800 rounded-lg p-4  w-48 right-0 shadow-none md:shadow-2xl">
                     <a href="produce.html" class="block px-4 py-2 text-slate-100 hover:bg-slate-100 hover:text-teal-800">Produce</a>
-                    <a href="#" class="block px-4 py-2 text-slate-100 hover:bg-slate-100 hover:text-teal-800">Canned Goods</a>
+                    <a href="canned-goods.html" class="block px-4 py-2 text-slate-100 hover:bg-slate-100 hover:text-teal-800">Canned Goods</a>
                     <!-- <a href="#" class="block px-4 py-2 text-slate-100 hover:bg-slate-100 hover:text-teal-800">Flowers + Garden</a>
                     <a href="#" class="block px-4 py-2 text-slate-100 hover:bg-slate-100 hover:text-teal-800">Fruit Baskets</a>
                     <a href="#" class="block px-4 py-2 text-slate-100 hover:bg-slate-100 hover:text-teal-800">Christmas Trees</a> -->
@@ -58,7 +58,7 @@
 
     <!-- Hero Section -->
     <section class="bg-slate-100 h-100 pt-12 pb-24 px-2">
-      <div class="px-4 py-12 mx-auto max-w-7xl sm:px-6 md:px-12 lg:px-24 lg:py-24">
+      <div class="px-4 py-12 mx-auto max-w-7xl sm:px-6 md:px-12 lg:px-24 lg:py-36">
         <div class="flex flex-wrap items-center mx-auto max-w-7xl">
           <div class="w-full lg:max-w-lg lg:w-1/2 rounded-xl">
             <div>
@@ -74,7 +74,7 @@
             <h1 class="mb-8 text-4xl font-bold font-serif leading-none tracking-tighter text-slate-800 md:text-4xl lg:text-5xl">Fresh Fruit, Veggies, Plants, & More</h1>
             <p class="mb-8 text-base leading-relaxed text-left text-gray-600">Stop by either of our two locations to get amazing produce, local jams + jellies, and fresh deli items, all made right here in the Chattanooga area since 1992.</p>
             <div class="flex-col mt-0 lg:mt-6 max-w-7xl sm:flex">
-              <div class="flex justify-center sm:items-center w-full max-w-2xl gap-2 mx-auto mt-6">
+              <div class="flex w-full max-w-2xl gap-2 mx-auto mt-6">
                 <div class="mt-3 rounded-lg sm:mt-0">
                   <a href="https://goo.gl/maps/Uwze9EBYoYavD1Hv9" target="_blank">
                     <button class="px-5 py-4 text-base font-medium text-center text-white transition duration-500 ease-in-out transform bg-teal-800 lg:px-10 rounded-xl hover:bg-amber-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-800">
@@ -82,7 +82,7 @@
                     </button>
                   </a>
                 </div>
-                <div class="mt-3 rounded-lg sm:mt-0 sm:ml-3">
+                <div class="mt-3 rounded-lg sm:mt-0 ">
                   <a href="https://goo.gl/maps/nix3TqFXcgPoq7AE6" target="_blank">
                     <button class="items-center block px-4 lg:px-8 py-3.5 text-base font-medium text-center text-teal-800 hover:bg-amber-500 hover:text-white transition duration-500 ease-in-out transform border-2 border-teal-800 hover:border-amber-400 shadow-md rounded-xl focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-400">
                       East Ridge Location
@@ -192,8 +192,8 @@
         <div class="flex flex-wrap items-center mx-auto max-w-7xl">
           <div class="w-full lg:max-w-lg lg:w-1/3 rounded-xl">
             <div>
-              <div class="relative w-full max-w-lg mx-auto">
-                <div class="relative">
+              <div class=" w-full max-w-lg mx-auto">
+                <div class="">
                   <img class="object-cover object-center mx-auto rounded-lg" alt="hero" src="img/best-of-the-best.png">
                 </div>
               </div>
@@ -210,7 +210,7 @@
 
     <!-- Locations Section -->
     <section>
-      <div class="relative items-center w-full px-5 py-12 mx-auto md:px-12 lg:px-24 max-w-7xl">
+      <div class=" items-center w-full px-5 py-12 mx-auto md:px-12 lg:px-24 max-w-7xl">
         <p class="text-center text-sm font-bold uppercase tracking-widest text-teal-800 mb-4">Chattanooga Area</p>
 
         <h1 class="mb-8 text-4xl pt-2 font-bold font-serif leading-none tracking-tighter text-slate-800 md:text-7xl lg:text-6xl text-center ">
@@ -243,7 +243,7 @@
 
     <!-- Connect Section -->
     <section id="contact" class="bg-slate-200 px-2">
-      <div class="relative items-center w-full px-4 py-12 mx-auto max-w-7xl sm:px-6 md:px-12 lg:px-24 lg:py-24">
+      <div class=" items-center w-full px-4 py-12 mx-auto max-w-7xl sm:px-6 md:px-12 lg:px-24 lg:py-24">
         <h2 class="mb-12 underline underline-offset-8 decoration-slate-400 decoration-wavy mt-4 text-4xl font-bold font-serif text-center tracking-tight text-slate-800 md:text-4xl lg:text-5xl">Contact Us</h2>
         <div class="grid w-full grid-cols-1 gap-6 mx-auto md:grid-cols-2">
 
