--- a/src/produce.html
+++ b/src/produce.html
@@ -72,7 +72,7 @@
                     <p class="mx-auto text-left mt-8 text-base md:text-xl leading-loose text-gray-600">We work hard to make sure you have the best produce every day of the year. 
                         It is very important to us to support our local farmers, which is why we source fruits and veggies from our local farms first and foremost, especially for those in season items.
                         Here are just a few of the yummy things you will find when you come to Linda's Produce:</p>
-                    <ul class="flex flex-wrap justify-start md:justify-center pt-8">
+                    <ul class="flex flex-wrap justify-start md:justify-center py-8">
                         <li class="px-4 text-base text-red-600    font-semibold py-2">Tomatoes</li>
                         <li class="px-4 text-base text-orange-600 font-semibold py-2">Strawberries</li>
                         <li class="px-4 text-base text-yellow-600 font-semibold py-2">Peaches</li>
