--- a/src/canned-goods.html
+++ b/src/canned-goods.html
@@ -60,8 +60,8 @@
 
     <!-- Main section -->
     <section class="bg-slate-100">
-        <div class="relative items-center w-full px-5 py-12 mx-auto md:px-12 lg:px-24 lg:py-24 max-w-7xl">
-            <h1 class="text-2xl md:text-3xl lg:text-4xl font-serif font-semibold text-slate-800 tracking-tighter text-center pt-24 pb-16">Canned Goods, Cheese, & Meats</h1>
+        <div class=" items-center w-full px-5 py-12 mx-auto md:px-12 lg:px-24 lg:py-20 max-w-7xl">
+            <h1 class="text-2xl md:text-3xl lg:text-4xl font-serif font-semibold text-slate-800 tracking-tighter text-center pt-16 pb-24">Canned Goods, Cheese, & Meats</h1>
           <div class="grid w-full grid-cols-1 gap-12 mx-auto lg:grid-cols-3">
             <div class="p-6">
                <img class="object-cover object-center w-full mb-8 lg:h-48 md:h-36 rounded-xl" src="img/honey.png" alt="honey" /> 
