Fixed file names and paths

--- a/src/produce.html
+++ b/src/produce.html
@@ -13,7 +13,7 @@
         <div class="relative w-full pb-4">
             <div x-data="{ open: false }" class="flex flex-col max-w-screen-xl py-2 px-5 mx-auto md:items-center md:justify-between md:flex-row md:px-6 lg:px-8">
                 <div class="flex flex-row items-center justify-between lg:justify-start">
-                    <a href="index.html" class="text-lg lg:text-2xl pr-2 font-bold font-serif tracking-tighter text-teal-800 transition duration-500 ease-in-out transform tracking-relaxed lg:pr-8 border-r-2 border-teal-800"> Linda's Produce </a>
+                    <a href="../index.html" class="text-lg lg:text-2xl pr-2 font-bold font-serif tracking-tighter text-teal-800 transition duration-500 ease-in-out transform tracking-relaxed lg:pr-8 border-r-2 border-teal-800"> Linda's Produce </a>
                     <p id="open-now" class="px-4 font-medium text-rose-700 animate-pulse"></p>
                     <button id="toggle" class="rounded-lg md:hidden focus:outline-none focus:shadow-outline" @click="open = !open">
                         <svg fill="currentColor" viewBox="0 0 20 20" class="w-8 h-8">
@@ -26,13 +26,13 @@
                 <nav id="nav" class="fixed inset-y-16 z-100 bottom-0 -right-full bg-teal-800 text-slate-100 text-xl font-semibold w-52 md:static md:w-auto md:bg-slate-100 md:text-teal-800 transition-all">
                 <ul class="md:flex">
                     <li>
-                    <a class="block p-5 hover:underline hover:underline-offset-4 decoration-double decoration-amber-500" href="index.html">Home</a>
+                    <a class="block p-5 hover:underline hover:underline-offset-4 decoration-double decoration-amber-500" href="../index.html">Home</a>
                     </li> 
                     <li> 
                     <a class="block p-5 hover:underline hover:underline-offset-4 decoration-double decoration-amber-500" href="about.html">About</a>
                     </li> 
                     <li> 
-                    <a class="block p-5 hover:underline hover:underline-offset-4 decoration-double decoration-amber-500" href="index.html">Contact</a>
+                    <a class="block p-5 hover:underline hover:underline-offset-4 decoration-double decoration-amber-500" href="../index.html">Contact</a>
                     </li> 
                     <li class="relative"> 
                     <div class="">
@@ -46,7 +46,7 @@
                     </div>
                     <div id="dropdown-menu" class="hidden relative bg-teal-800 rounded-lg p-4  w-48 right-0 shadow-none md:shadow-2xl">
                         <a href="produce.html" class="block px-4 py-2 text-slate-100 hover:bg-slate-100 hover:text-teal-800">Produce</a>
-                        <a href="jar-goods.html" class="block px-4 py-2 text-slate-100 hover:bg-slate-100 hover:text-teal-800">Jar Goods + Deli</a>
+                        <a href="canned-goods.html" class="block px-4 py-2 text-slate-100 hover:bg-slate-100 hover:text-teal-800">Jar Goods + Deli</a>
                         <!-- <a href="#" class="block px-4 py-2 text-slate-100 hover:bg-slate-100 hover:text-teal-800">Flowers + Garden</a>
                         <a href="#" class="block px-4 py-2 text-slate-100 hover:bg-slate-100 hover:text-teal-800">Fruit Baskets</a>
                         <a href="#" class="block px-4 py-2 text-slate-100 hover:bg-slate-100 hover:text-teal-800">Christmas Trees</a> -->
@@ -170,7 +170,7 @@
             </div>
 
             <div class="text-center pt-12">
-                <a href="index.html" class="text-slate-100 text-sm tracking-relaxed font-semibold font-serif">Linda's Produce © 2022</a>
+                <a href="../index.html" class="text-slate-100 text-sm tracking-relaxed font-semibold font-serif">Linda's Produce © 2022</a>
             </div>
         </footer>
         <!-- /Footer -->
