--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <nav id="nav" class="fixed inset-y-16 z-100 bottom-0 -right-full bg-teal-800 text-slate-100 text-xl font-semibold w-52 md:static md:w-auto md:bg-slate-100 md:text-teal-800 transition-all">
               <ul class="md:flex">
                 <li>
-                  <a class="block p-5 hover:underline hover:underline-offset-4 decoration-double decoration-amber-500" href="#">Home</a>
+                  <a class="block p-5 hover:underline hover:underline-offset-4 decoration-double decoration-amber-500" href="index.html">Home</a>
                 </li> 
                 <li> 
-                  <a class="block p-5 hover:underline hover:underline-offset-4 decoration-double decoration-amber-500" href="about.html">About</a>
+                  <a class="block p-5 hover:underline hover:underline-offset-4 decoration-double decoration-amber-500" href="src/about.html">About</a>
                 </li> 
                 <li> 
                   <a class="block p-5 hover:underline hover:underline-offset-4 decoration-double decoration-amber-500" href="#contact">Contact</a>
@@ -44,8 +44,8 @@
                     </button>
                   </div>
                   <div id="dropdown-menu" class="hidden absolute bg-teal-800 rounded-lg p-4  w-48 right-0 shadow-none md:shadow-2xl">
-                    <a href="produce.html" class="block px-4 py-2 text-slate-100 hover:bg-slate-100 hover:text-teal-800">Produce</a>
-                    <a href="canned-goods.html" class="block px-4 py-2 text-slate-100 hover:bg-slate-100 hover:text-teal-800">Canned Goods</a>
+                    <a href="src/produce.html" class="block px-4 py-2 text-slate-100 hover:bg-slate-100 hover:text-teal-800">Produce</a>
+                    <a href="src/canned-goods.html" class="block px-4 py-2 text-slate-100 hover:bg-slate-100 hover:text-teal-800">Canned Goods</a>
                     <!-- <a href="#" class="block px-4 py-2 text-slate-100 hover:bg-slate-100 hover:text-teal-800">Flowers + Garden</a>
                     <a href="#" class="block px-4 py-2 text-slate-100 hover:bg-slate-100 hover:text-teal-800">Fruit Baskets</a>
                     <a href="#" class="block px-4 py-2 text-slate-100 hover:bg-slate-100 hover:text-teal-800">Christmas Trees</a> -->
