Added a contact page and updated images with compressed versions

--- a/src/about.html
+++ b/src/about.html
@@ -2,9 +2,9 @@
 <html>
         <head>
             <meta charset="UTF-8">
-            <title>Linda's Produce</title>
+            <title>About | Linda's Produce</title>
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link href="/dist/output.css" rel="stylesheet">
+            <link href="../dist/output.css" rel="stylesheet">
         </head>
     <body id="container">
 
@@ -31,7 +31,7 @@
                     <a class="block p-5 hover:underline hover:underline-offset-4 decoration-double decoration-amber-500" href="about.html">About</a>
                     </li> 
                     <li> 
-                    <a class="block p-5 hover:underline hover:underline-offset-4 decoration-double decoration-amber-500" href="../index.html">Contact</a>
+                    <a class="block p-5 hover:underline hover:underline-offset-4 decoration-double decoration-amber-500" href="contact.html">Contact</a>
                     </li> 
                     <li class="relative"> 
                     <div class="">
