--- a/src/produce.html
+++ b/src/produce.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Produce | Linda's Produce</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="/dist/output.css" rel="stylesheet">
+        <link href="../dist/output.css" rel="stylesheet">
     </head>
 
     <body id="container" class="bg-slate-100">
@@ -32,7 +32,7 @@
                     <a class="block p-5 hover:underline hover:underline-offset-4 decoration-double decoration-amber-500" href="about.html">About</a>
                     </li> 
                     <li> 
-                    <a class="block p-5 hover:underline hover:underline-offset-4 decoration-double decoration-amber-500" href="../index.html">Contact</a>
+                    <a class="block p-5 hover:underline hover:underline-offset-4 decoration-double decoration-amber-500" href="contact.html">Contact</a>
                     </li> 
                     <li class="relative"> 
                     <div class="">
@@ -60,14 +60,14 @@
 
         <!-- Hero Image-->
         <div class="h-lg max-h-xl">
-            <img src="img/tomato-hands.jpg" class="w-full contrast-25 max-h-xl" />
+            <img src="img/tomato-hands-min.jpg" class="w-full contrast-25 max-h-xl" />
         </div>
         <!--</div>-->
 
         <!-- Info Section --> 
         <section class="h-100 w-full static">
             <div class="px-4 pt-8 mx-auto max-w-7xl sm:px-6 md:px-12 md:pt-24 lg:px-24 lg:pt-24 lg:pb-12">
-                <div class="flex flex-col w-full mt-12 mb-4 text-center">
+                <div class="flex flex-col w-full mt-8 mb-4 text-center">
                     <h1 class="text-slate-800 font-bold font-serif tracking-tighter text-3xl md:text-5xl">Farm Fresh Fruit & Veggies</h1>
                     <p class="mx-auto text-left mt-8 text-base md:text-xl leading-loose text-gray-600">We work hard to make sure you have the best produce every day of the year. 
                         It is very important to us to support our local farmers, which is why we source fruits and veggies from our local farms first and foremost, especially for those in season items.
