--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>Linda's Produce</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/dist/output.css" rel="stylesheet">
+    <link href="./dist/output.css" rel="stylesheet">
   </head>
 
-  <body id="container" class="hover:cursor-fancy">
+  <body>
     <!-- Header & Navigation -->
     <div class="absolute w-full bg-slate-100 pb-4">
         <div x-data="{ open: false }" class="flex flex-col max-w-screen-xl py-2 px-5 mx-auto md:items-center md:justify-between md:flex-row md:px-6 lg:px-8">
@@ -31,7 +31,7 @@
                   <a class="block p-5 hover:underline hover:underline-offset-4 decoration-double decoration-amber-500" href="src/about.html">About</a>
                 </li> 
                 <li> 
-                  <a class="block p-5 hover:underline hover:underline-offset-4 decoration-double decoration-amber-500" href="#contact">Contact</a>
+                  <a class="block p-5 hover:underline hover:underline-offset-4 decoration-double decoration-amber-500" href="src/contact.html">Contact</a>
                 </li> 
                 <li class="relative"> 
                   <div class="">
@@ -182,7 +182,7 @@
             <div>
               <div class="w-full max-w-lg mx-auto">
                 <div>
-                  <img class="object-cover object-center mx-auto rounded-lg" alt="hero" src="src/img/best-of-the-best.png">
+                  <img class="object-cover object-center mx-auto rounded-lg" alt="hero" src="src/img/best-of-the-best-min.png">
                 </div>
               </div>
             </div>
